[social-media] final code & final draft

--- a/social-media/report/report.bib
+++ b/social-media/report/report.bib
@@ -220,4 +220,11 @@ year = {2003}
   year={2004},
   publisher={National Acad Sciences}
 }
+@article{haveliwala_2002,
+  title={Topic-sensitive pagerank},
+  author={Haveliwala, Taher H.},
+  journal={Proceedings of the 11th international conference on World Wide Web},
+  year={2002},
+  publisher={ACM}
+}
 
