--- a/social-media/twitter-influencers/visualise_lda.ipynb
+++ b/social-media/twitter-influencers/visualise_lda.ipynb
@@ -228,6 +228,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "606631"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sep_corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": false
@@ -248,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -257,31 +279,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 0: 05 lady gaga link check #mtvstars days utc #mtvhottest bio spotted boom best stock convention\n",
-      "Topic 1: game job art apply believe alert photo guy baby watch caught beat home return hits\n",
-      "Topic 2: back want people tweet new video great twitter like see ever feel boys day full\n",
-      "Topic 3: 09 22 18 ut going #ascendant listen 08 luck ac looking keep #mediumcoeli mc download\n",
-      "Topic 4: new #deals black end iphone apple case date buy app post 2 caps games #iphone\n",
-      "Topic 5: trump clinton get hillary special donald free email list tips access join #home vote updates\n",
-      "Topic 6: 31 shirt sz time #gamedev new started late second #final 5 boost #indiedev yeezy shocking\n",
-      "Topic 7: 2016 july pm #えどがわイケメン tos null mdbjss xxx 11 ca afe 20 s0t 12345 gun\n",
-      "Topic 8: go got year playing let thing high friends 19 one ever would mom life like\n",
-      "Topic 9: code 10 use get like 15 20 25 free available sale wear order https shipping\n",
-      "Topic 10: 3ndback #jobs media via social marketing business service read turn morning internet taking #business new\n",
-      "Topic 11: black size new nike white air top 12 shoes #shoes blue jordan season 1 mens\n",
-      "Topic 12: beautiful girl see 23 heart 29 home away part mind following 01 woman flight man\n",
-      "Topic 13: may latest design inc #tech new course hey piping body price make institute want perfect\n",
-      "Topic 14: love follow u work please today get happy c thank always much world wanted never\n",
-      "Topic 15: 21 26 via 04 r w card page america offer degree college fire top future\n",
-      "Topic 16: 30 need things know girls right life give people really like guys get play fuck\n",
-      "Topic 17: one three try million hundred ah sign free two west could killed follow update thousand\n",
-      "Topic 18: look good photos must police stop music #urbanattires #euro2016 years 100 see found shop sex\n",
-      "Topic 19: 06 crzx_omg #news join us says president dead nice police news attack one report france\n"
+      "Topic 0: 05 lady gaga link check #mtvstars days utc #mtvhottest bio spotted boom best stock convention united click win yet double\n",
+      "Topic 1: game job art apply believe alert photo guy baby watch caught beat home return hits meet gets went amazing loves\n",
+      "Topic 2: back want people tweet new video great twitter like see ever feel boys day full town get done via another\n",
+      "Topic 3: 09 22 18 ut going #ascendant listen 08 luck ac looking keep #mediumcoeli mc download different 07 #ipl 4 high\n",
+      "Topic 4: new #deals black end iphone apple case date buy app post 2 caps games #iphone cover mini bag 4 6\n",
+      "Topic 5: trump clinton get hillary special donald free email list tips access join #home vote updates frog f bet resolved priority\n",
+      "Topic 6: 31 shirt sz time #gamedev new started late second #final 5 boost #indiedev yeezy shocking destination 2 f reached cool\n",
+      "Topic 7: 2016 july pm #えどがわイケメン tos null mdbjss xxx 11 ca afe 20 s0t 12345 gun trends trending 7 gundam cat\n",
+      "Topic 8: go got year playing let thing high friends 19 one ever would mom life like 27 every smile enough pokemon\n",
+      "Topic 9: code 10 use get like 15 20 25 free available sale wear order https shipping gold lit summer would shop\n",
+      "Topic 10: 3ndback #jobs media via social marketing business service read turn morning internet taking #business new customer xbox #marketing sales line\n",
+      "Topic 11: black size new nike white air top 12 shoes #shoes blue jordan season 1 mens dress red men episode 10\n",
+      "Topic 12: beautiful girl see 23 heart 29 home away part mind following 01 woman flight man boss name things speech feet\n",
+      "Topic 13: may latest design inc #tech new course hey piping body price make institute want perfect food #news check #amazon signs\n",
+      "Topic 14: love follow u work please today get happy c thank always much world wanted never experience ur someone best hi\n",
+      "Topic 15: 21 26 via 04 r w card page america offer degree college fire top future amazon spend important 10 credit\n",
+      "Topic 16: 30 need things know girls right life give people really like guys get play fuck wrong never remember still talk\n",
+      "Topic 17: one three try million hundred ah sign free two west could killed follow update thousand exit give us new five\n",
+      "Topic 18: look good photos must police stop music #urbanattires #euro2016 years 100 see found shop sex later place worth site like\n",
+      "Topic 19: 06 crzx_omg #news join us says president dead nice police news attack one report france obama son streaming paul rio\n"
      ]
     }
    ],
    "source": [
-    "for row in sep_model.show_topics(num_topics=-1, num_words=15, formatted=False):\n",
+    "for row in sep_model.show_topics(num_topics=-1, num_words=20, formatted=False):\n",
     "    print('Topic %d: %s' % (row[0], ' '.join([w[0] for w in row[1]])))"
    ]
   },
@@ -583,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -593,31 +615,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic 0: code shop pinned tweet available wear sale https order #tech another share lit gold #fashion\n",
-      "Topic 1: currently mind heart pm thank double following #nowplaying fairy quote #jobs code johnson part #nfl\n",
-      "Topic 2: resolved join play #pushawardslizquens gbp streaming invite part code page 01 bet someone https #bigdata\n",
-      "Topic 3: #news photos via ut size sex nike null jordan air #mediumcoeli post source tumblr #ascendant\n",
-      "Topic 4: via boys news town ebay vintage r deal size bid #adult share w https set\n",
-      "Topic 5: buy pm beautiful mind following #えどがわイケメン vol #deals direction nothing places others blessed humble fashion\n",
-      "Topic 6: lady gaga check days offer stock #health win apply personalized via deals #deals business #home\n",
-      "Topic 7: pm tos #えどがわイケメン null afe 11 16 17 14 26 21 29 13 18 25\n",
-      "Topic 8: #えどがわイケメン pm tos mdbjss follow #gamedev ca tweet #indiedev 25 app 16 win gbp 24\n",
-      "Topic 9: course #mtvhottest follow gaga lady design institute #jobs #mgwv trump engineering via certified qa qc\n",
-      "Topic 10: #shoes nike size air shoes price #news low jordan ah listen null 11 jul retro\n",
-      "Topic 11: size air shoes #deals nike jordan baby #amazon mens sz listen red someone 90s 80s\n",
-      "Topic 12: utc spotted may check latest _ hey updates inc bid #nowplaying camera follow via jul\n",
-      "Topic 13: pm s0t xxx tweet hi hope happy code #football thanks #steelers steelers #pittsburgh via meet\n",
-      "Topic 14: following code please c mm temperature rain mind barometer hpa null wind dream smile follow\n",
-      "Topic 15: null code episode season offer card w join list special updates access spend terms email\n",
-      "Topic 16: #news code silver sale #silver f page buy pm temp floor follow available dollar 3rd\n",
-      "Topic 17: jobs #home hello experience trending follow graduate wanted tips #news decor check improvement trends #gardening\n",
-      "Topic 18: #jobs jul beds scheduled baths #ipl bus remark thank following gate someone mind due mins\n",
-      "Topic 19: shirt code hundred #euro2016 luck give try #final app three hi ah million classroom size\n"
+      "Topic 0: code shop pinned tweet available wear sale https order #tech another share lit gold #fashion #apple sex #urbanattires check incident\n",
+      "Topic 1: currently mind heart pm thank double following #nowplaying fairy quote #jobs code johnson part #nfl someone handbag hi dark #soulecting\n",
+      "Topic 2: resolved join play #pushawardslizquens gbp streaming invite part code page 01 bet someone https #bigdata bid news bonus business pm\n",
+      "Topic 3: #news photos via ut size sex nike null jordan air #mediumcoeli post source tumblr #ascendant house sign plz ac give\n",
+      "Topic 4: via boys news town ebay vintage r deal size bid #adult share w https set published apple #sex blue escorts\n",
+      "Topic 5: buy pm beautiful mind following #えどがわイケメン vol #deals direction nothing places others blessed humble fashion #ebay via #growthhacking #special #cheap\n",
+      "Topic 6: lady gaga check days offer stock #health win apply personalized via deals #deals business #home found #jobs human xxx #hr\n",
+      "Topic 7: pm tos #えどがわイケメン null afe 11 16 17 14 26 21 29 13 18 25 08 09 22 24 07\n",
+      "Topic 8: #えどがわイケメン pm tos mdbjss follow #gamedev ca tweet #indiedev 25 app 16 win gbp 24 gun 1l 27 29 post\n",
+      "Topic 9: course #mtvhottest follow gaga lady design institute #jobs #mgwv trump engineering via certified qa qc retweet gain code police #followtrick\n",
+      "Topic 10: #shoes nike size air shoes price #news low jordan ah listen null 11 jul retro mens far red gold pm\n",
+      "Topic 11: size air shoes #deals nike jordan baby #amazon mens sz listen red someone 90s 80s blue 24hrs hiphop 11 9\n",
+      "Topic 12: utc spotted may check latest _ hey updates inc bid #nowplaying camera follow via jul event photos associated notification please\n",
+      "Topic 13: pm s0t xxx tweet hi hope happy code #football thanks #steelers steelers #pittsburgh via meet poncho #cricket customer pizza holy\n",
+      "Topic 14: following code please c mm temperature rain mind barometer hpa null wind dream smile follow humidity trump business pm started\n",
+      "Topic 15: null code episode season offer card w join list special updates access spend terms email receive connected f credit pm\n",
+      "Topic 16: #news code silver sale #silver f page buy pm temp floor follow available dollar 3rd #mgwv amazon flight set product\n",
+      "Topic 17: jobs #home hello experience trending follow graduate wanted tips #news decor check improvement trends #gardening read pm sorry daily code\n",
+      "Topic 18: #jobs jul beds scheduled baths #ipl bus remark thank following gate someone mind due mins lego everything person woman #build\n",
+      "Topic 19: shirt code hundred #euro2016 luck give try #final app three hi ah million classroom size #news thousand #tech buy h\n"
      ]
     }
    ],
    "source": [
-    "for row in grp_model.show_topics(num_topics=-1, num_words=15, formatted=False):\n",
+    "for row in grp_model.show_topics(num_topics=-1, num_words=20, formatted=False):\n",
     "    print('Topic %d: %s' % (row[0], ' '.join([w[0] for w in row[1]])))"
    ]
   },
